# SIMUDAH

./: .gitignore  Cargo.toml
backend/: .env.example  Cargo.toml
backend/migrations/: 20260709000001_init.sql  20260709000002_curah_hujan.sql  20260709000003_log_mutu.sql  20260709000004_validasi.sql
backend/src/: auth.rs  data_hujan.rs  log_mutu.rs  main.rs  overview.rs  pos.rs  seed.rs
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  auth.rs  lib.rs  main.rs
frontend/src/components/: sidebar.rs
frontend/src/pages/: curah_hujan.rs  dashboard.rs  data_hujan.rs  home.rs  login.rs  mod.rs  pos.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
